# coml-extension

./: .gitignore  Cargo.toml  LICENSE  README.md  package.json
.cargo/: config.toml
.github/workflows/: deploy-extension.yml  release.yml  vscode-publish-extension.yml  vscode-remove-extension.yml
crates/coml-decoder/: Cargo.toml
crates/coml-decoder/src/: lib.rs
crates/coml-lsp/: Cargo.toml  build.rs
editors/vscode/: .vscodeignore  README.md  language-configuration.json  package-lock.json  package.json  tsconfig.json
editors/vscode/src/: completions.ts  extension.ts
editors/vscode/syntaxes/: coml.tmLanguage.json
syntaxes/: coml.tmLanguage.json
tests/: comments.coml  tests-package-manifest.coml  tests-workspace-manifest.coml  value.coml  values.coml
xtask/: Cargo.toml
