[package]
name = "coml-lsp"
version = "0.1.0"
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
build = "./build.rs"

[[bin]]
name = "coml-lsp"
path = "src/main.rs"

[features]
default = []

[dependencies]


[build-dependencies]
cargo_metadata = "0.23"